[gd_scene load_steps=6 format=3 uid="uid://ci4np1kvjqkts"]

[ext_resource type="Script" path="res://scenes/minigames/room_reservations/room_node/room_node.gd" id="1_kwpdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x12fs"]
bg_color = Color(0.0705882, 0.254902, 0.215686, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.117647)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gogyk"]
bg_color = Color(0.0392157, 0.172549, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.109804)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vhuc"]
bg_color = Color(0.0705882, 0.254902, 0.215686, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.101961)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoq66"]
bg_color = Color(0.0392157, 0.172549, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.105882)
shadow_size = 1
shadow_offset = Vector2(0, 1)

[node name="RoomNode" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -856.0
offset_bottom = -689.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwpdo")

[node name="RoomName" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[room name]"
fit_content = true

[node name="ButtonUp" type="Button" parent="."]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x12fs")
theme_override_styles/hover = SubResource("StyleBoxFlat_gogyk")
text = "↑"

[node name="ButtonDown" type="Button" parent="."]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7vhuc")
theme_override_styles/hover = SubResource("StyleBoxFlat_xoq66")
text = "↓"

[connection signal="pressed" from="ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="ButtonDown" to="." method="_on_button_down_pressed"]
